UI: Fixes spacing issue for buttons in notification popups

--- a/structr-base/src/main/resources/structr/css/main.css
+++ b/structr-base/src/main/resources/structr/css/main.css
@@ -2253,13 +2253,6 @@ th.center {
 	overflow: auto;
 }
 
-#info-area .message-buttons {
-	position: relative;
-	text-align: right;
-	margin-bottom: -6px;
-	margin: 2px -3px -8px 0;
-}
-
 #info-area .message-buttons:empty {
 	margin: 0;
 }
